# binance-cpp

./: .gitignore  .gitmodules  .projectile  .travis.yml  CMakeLists.txt  DOCUMENT.md  Dockerfile  LICENSE  README.md  build-boost.sh  build-openssl.sh  build.sh  doc.md  main.cc  push-docker-image.sh  websocket_client_async_ssl.cpp
example/: depth_cache_example.cc  example.cc  main.cc
include/binance/: api.hpp  binance.hpp  endpoint.hpp  extra.hpp  types.hpp  websocket_client.hpp
include/binance/models/: account.hpp  agg_trade.hpp  agg_trade_event.hpp  book_ticker.hpp  cancel_order_response.hpp  candle_stick.hpp  candle_stick_event.hpp  deposit_history.hpp  depth_event.hpp  models.hpp  new_order_response.hpp  order.hpp  order_book.hpp  ticker_price.hpp  ticker_statistics.hpp  trade.hpp  withdraw_history.hpp
include/binance/types/: account.hpp  agg_trade.hpp  agg_trade_event.hpp  balance.hpp  book_ticker.hpp  cancel_order_response.hpp  candle_stick.hpp  candle_stick_event.hpp  deposit_history.hpp  depth_event.hpp  new_order_response.hpp  order.hpp  order_book.hpp  ticker_price.hpp  ticker_statistics.hpp  trade.hpp  types.hpp  withdraw_history.hpp
include/binance/websocket/: client.hpp
script/: build-boost.sh  build-openssl.sh  build.sh  pre-install.sh  test.sh
src/: api.hpp  endpoint.hpp  root_certificates.hpp  websocket_client.hpp
test/: json_test.hpp  request_test.hpp  tests.cc
